Scripts added and file cleanup

--- a/build.xml
+++ b/build.xml
@@ -39,6 +39,7 @@
             <fileset dir="${build.dir}">
                 <include name="**/*.class"/>
                 <include name="**/*.*.swp"/>
+                <include name="**/.*.*.swp"/>
             </fileset>
         </delete>
    </target>
