--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-   <project name="Examples" basedir="." default="info">
+   <project name="Examples" basedir="." default="jar">
     <property name="src.dir" value="Java"/>
     <property name="build.dir" value="${src.dir}/classes"/>
 
@@ -12,7 +12,7 @@
      <patternset refid="java.files"/>
    </fileset>
 
-   <target name="jar">
+   <target name="jar" depends="build">
         <mkdir dir="build/"/>
         <jar destfile="build/Example.jar" basedir="${build.dir}"> </jar>
     </target>
@@ -40,6 +40,7 @@
                 <include name="**/*.class"/>
                 <include name="**/*.*.swp"/>
                 <include name="**/.*.*.swp"/>
+                <include name="**/.jar"/>
             </fileset>
         </delete>
    </target>
